Optimize mobile display: adjust UnitToggle alignment for consistent right spacing

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,10 @@ next-env.d.ts
 
 # md files
 PROJECT_GUIDE.md
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
